kubeflow/common/istio/cognito-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
  labels:
    app: kubeflow
    name: istio-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/auth-type: cognito
    alb.ingress.kubernetes.io/auth-scope: openid
    # Cognito parameters required for creation of authentication rules
    # The subdomain name only is sufficient for `UserPoolDomain`
    # e.g. if `FQDN=app.auth.ap-northeast-1.amazoncognito.com` then `UserPoolDomain=app`
    alb.ingress.kubernetes.io/auth-idp-cognito: '{"UserPoolArn": "arn:aws:cognito-idp:<region>:<account-id>:userpool/<region><cognito-id>","UserPoolClientId":"<user-pool-client-id>","UserPoolDomain":"<user-pool-authentication-domain>"}'
    # ACM certificate ARN for your SSL domain
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:<region>:<account-id>:certificate/<certificate-id>
spec:
  rules:
    - host: kubeflow.my-eks-cluster.my-domain.com
      http:
        paths:
          - backend:
              serviceName: istio-ingressgateway
              servicePort: 80
            path: "/*"
    - host: serving.my-eks-cluster.my-domain.com
      http:
        paths:
          - backend:
              serviceName: istio-ingressgateway
              servicePort: 80
            path: "/*"
    - host: "*.serving.my-eks-cluster.my-domain.com"
      http:
        paths:
          - backend:
              serviceName: istio-ingressgateway
              servicePort: 80
            path: "/*"
  tls:
    - hosts:
        - "kubeflow.my-eks-cluster.my-domain.com"
        - "serving.my-eks-cluster.my-domain.com"
        - "*.serving.my-eks-cluster.my-domain.com"
      secretName: istio-ingressgateway-certs
